[package]
name = "comms-freq-sync-py"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "comms_freq_sync_py"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module", "num-complex"] }
env_logger = "0.11.8"
log = "0.4.27"
num = "0.4.3"
phastft = "0.2.1"
num-complex = "0.4.6"
